Replace internals of GdsCypher with CypherDSL